--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,9 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
   http:
+  flutter_bloc:
+  equatable:
+  bloc:
 
 dev_dependencies:
   flutter_test:
